--- a/index.html
+++ b/index.html
@@ -13,18 +13,31 @@
 
 <body>
 
-  <header>header</header>
+  <header>
+    <div class="header-inner">
+      <span>Chocobrat</span>
+      <nav aria-label="Primary Navigation">
+        <ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div>
+        <form>
+          <input type="text" placeholder="Search" />
+          <button>
+            <img src="assets/search.png" alt="Search">
+          </button>
+        </form>
+        <img src="assets/user.png" alt="User">
+        <img src="assets/cart.png" alt="Cart">
+      </div>
+    </div>
+  </header>
 
-  <nav class="navigatior">
-    <span>Chocobrat</span>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-    </ul>
-    <input />
-  </nav>
+
   <main class="container">main content</main>
 
   <footer>footer</footer>
