--- a/index.html
+++ b/index.html
@@ -1,78 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Chocobrat</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <header>
-      <div class="header-inner">
-        <span>Chocobrat</span>
-        <nav aria-label="Primary Navigation">
-          <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </nav>
-        <div>
-          <form>
-            <input type="text" placeholder="Search" />
-            <button>
-              <img src="assets/search.png" alt="Search" />
-            </button>
-          </form>
-          <img src="assets/user.png" alt="User" />
-          <img src="assets/cart.png" alt="Cart" />
-        </div>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css" />
+  <title>Chocobrat</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+</head>
 
-    <nav class="navigatior">
+<body>
+  <header>
+    <div class="header-inner">
       <span>Chocobrat</span>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-      </ul>
-      <input />
-    </nav>
-    <main class="container"><div class="wrapper">main content</div></main>
-
-    <footer class="footer">
-      <nav class="footer-nav">
-        <span>Chocobrat</span>
+      <nav aria-label="Primary Navigation">
         <ul>
-          <li>Home</li>
-          <li>Categories</li>
-          <li>About Us</li>
-          <li>Contact Us</li>
-          <li>Careers</li>
-          <li>Help</li>
-          <li>Privacy</li>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
-      <div class="footer-info">
-        &copy; 2021 Chocobrat. All rights reserved.
-        <div class="footer-info-imgs">
-          <img src="./assets/Facebook.png" />
-          <img src="./assets/Twitter.png" />
-          <img src="./assets/Instagram.png" />
-          <img src="./assets/Github.png" />
-          <img src="./assets/LinkedIn.png" />
+      <div>
+        <form>
+          <input type="text" placeholder="Search" />
+          <button>
+            <img src="assets/search.png" alt="Search" />
+          </button>
+        </form>
+        <img src="assets/user.png" alt="User" />
+        <img src="assets/cart.png" alt="Cart" />
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="main1-container">
+      <div class="wrapper">
+        <div class="hero-content">
+          <h1>Bring you Happiness <br>through a piece of cake</h1>
+          <p>We make Diffrent type of cakes, chocolate, soft cookies, cheesecake pie or anything you want.</p>
+          <div class="hero-call">
+            <a href="#" class="call-to-action">Order Now</a>
+            <a href="#" class="call-to-action">See All Menus</a>
+          </div>
+        </div>
+        <img src="assets/chocolate-cake.png" alt="Chocolate Cake" class="hero-image">
+      </div>
+      <div class="hero-cakes">
+        <div class="hero-navigation">
+          <img src="assets/arrow-left.png" alt="Arrow Left">
+          <p>01/<sup>12</sup></p>
+          <img src="assets/arrow-right.png" alt="Arrow Right">
+        </div>
+        <div class="hero-cakes-images">
+          <img src="assets/hero-1.png" alt="Cake 1">
+          <img src="assets/hero-2.png" alt="Cake 2">
+          <img src="assets/hero-3.png" alt="Cake 3">
         </div>
       </div>
-    </footer>
-  </body>
+    </section>
+
+    <div class="gradient"></div>
+
+    <section class="main2-container">
+      <div class="wrapper">
+        <div class="products-title">
+          <h2>Try Our Best Selling</h2>
+          <span></span>
+          <p>Here’s our best creations that everyone loves. Lightness and sweetness of the cake make you want more and more. Start from cake, bread and other creations.</p>
+        </div>
+        <div class="products-list">
+          <div class="product">
+            <img src="assets/cakes-1.png" alt="Product 1">
+            <h3>Red Velvet & Cream Cheese ( 500g )</h3>
+            <div class="rating">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/outline-star.png" alt="Outline Star">
+              <span>4.0 Rating</span>
+            </div>
+          </div>
+          <div class="product">
+            <img src="assets/cakes-2.png" alt="Product 1">
+            <h3>Red Velvet & Cream Cheese ( 500g )</h3>
+            <div class="rating">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/outline-star.png" alt="Outline Star">
+              <span>4.0 Rating</span>
+            </div>
+          </div>
+          <div class="product">
+            <img src="assets/cakes-3.png" alt="Product 1">
+            <h3>Red Velvet & Cream Cheese ( 500g )</h3>
+            <div class="rating">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/outline-star.png" alt="Outline Star">
+              <span>4.0 Rating</span>
+            </div>
+          </div>
+          <div class="product">
+            <img src="assets/cakes-4.png" alt="Product 1">
+            <h3>Red Velvet & Cream Cheese ( 500g )</h3>
+            <div class="rating">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/outline-star.png" alt="Outline Star">
+              <span>4.0 Rating</span>
+            </div>
+          </div>
+          <div class="product">
+            <img src="assets/cakes-5.png" alt="Product 1">
+            <h3>Red Velvet & Cream Cheese ( 500g )</h3>
+            <div class="rating">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/filled-star.png" alt="Star">
+              <img src="assets/outline-star.png" alt="Outline Star">
+              <span>4.0 Rating</span>
+            </div>
+          </div>
+
+        </div>
+        <a href="#" class="call-to-action">View More <img src="assets/arrow-right.png" alt="Arrow Right"></a>
+    </section>
+
+    <section class="main3-container">
+      <div class="wrapper"></div>
+    </section>
+
+    <section class="main4-container"></section>
+
+  </main>
+
+  <footer class="footer">
+    <nav class="footer-nav">
+      <span>Chocobrat</span>
+      <ul>
+        <li>Home</li>
+        <li>Categories</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+        <li>Careers</li>
+        <li>Help</li>
+        <li>Privacy</li>
+      </ul>
+    </nav>
+    <div class="footer-info">
+      &copy; 2021 Chocobrat. All rights reserved.
+      <div class="footer-info-imgs">
+        <img src="./assets/Facebook.png" />
+        <img src="./assets/Twitter.png" />
+        <img src="./assets/Instagram.png" />
+        <img src="./assets/Github.png" />
+        <img src="./assets/LinkedIn.png" />
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
